# ml-server-template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: pyproject.toml
